--- a/quarry-locations.html
+++ b/quarry-locations.html
@@ -100,7 +100,7 @@
 			</p>
 		</div>
 		<div class="large-4 columns">
-			<h3 class="location tensed">Tensed - New!</h3>
+			<h3 class="location tensed">Tensed</h3>
 			<p class="tensed">
         Tensed<br/>
 				ID<br />
