Update location list for Clark Fork

--- a/quarry-locations.html
+++ b/quarry-locations.html
@@ -108,7 +108,7 @@
 			</p>
 		</div>
     <div class="large-4 columns">
-			<h3 class="location clark-fork">Clark Fork - Vogel</h3>
+			<h3 class="location clark-fork">Clark Fork (Vogel) - <span class="new">New!</span></h3>
 			<p class="clark-fork">
         58345 HWY 200<br/>
 				Clark Fork, ID<br />
