update Clark Fork / Vogel pricing

--- a/quarry-locations.html
+++ b/quarry-locations.html
@@ -112,7 +112,7 @@
 			<p class="clark-fork">
         58345 HWY 200<br/>
 				Clark Fork, ID<br />
-				<a style="font-size: 12px;" data-featherlight href="img/pricing/prices_2022_cf-vogel _eff_2070122.png">PRICE LIST</a>
+				<a style="font-size: 12px;" data-featherlight href="img/pricing/prices_2023-05_cf-vogel _eff.png">PRICE LIST</a>
 			</p>
 		</div>
 	</div>
@@ -163,13 +163,13 @@
 				<a href="https://www.google.com/maps/place/902+Baldy+Rd,+Sandpoint,+ID+83864/" target="_blank">
 				<img src="img/map.png" alt="map" class="alignleft" height="36" width="25"/></a>
 				<p class="address">
-				   902 Baldy Mountain Road<br/>
-				   Sandpoint, ID 83864<br/>
-				   USA</p>
+					902 Baldy Mountain Road<br/>
+					Sandpoint, ID 83864<br/>
+					USA</p>
 				<p class="pL60">
-				   P.O. Box 405<br/>
-				   Sandpoint, ID 83864<br/>
-				   USA</p>
+					P.O. Box 405<br/>
+					Sandpoint, ID 83864<br/>
+					USA</p>
 			</div>
 		</div>
 		<div class="large-4 column">
