remove featherlight. link to pdfs in new tab

--- a/quarry-locations.html
+++ b/quarry-locations.html
@@ -6,9 +6,7 @@
 <title>Pit Locations: Peak Sand and Gravel</title>
 <link rel="stylesheet" href="css/foundation.css" />
 <link rel="stylesheet" href="css/styles.css" />
-<link href="//cdn.jsdelivr.net/npm/featherlight@1.7.14/release/featherlight.min.css" type="text/css" rel="stylesheet" />
 <script src="//code.jquery.com/jquery-latest.js"></script>
-<script src="//cdn.jsdelivr.net/npm/featherlight@1.7.14/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="js/jquery.slides.min.js"></script>
 <script src="js/modernizr.js"></script>
 <script src="js/foundation.min.js"></script>
@@ -80,7 +78,7 @@
       <p class="kootenai">
         2076 N. Kootenai Road<br/>
 				Sandpoint, ID 83864<br />
-				<a data-featherlight="<figure class='pricing-embed'><object type='application/pdf' data='pdf/pricing/prices_2024-01_kootenai_pit_eff.pdf#&navpanes=0' /></figure>">PRICE LIST</a>
+				<a href="pdf/pricing/prices_2024-01_kootenai_pit_eff.pdf#&navpanes=0" target="_blank">PRICE LIST</a>
 			</p>
     </div>
 		
@@ -89,7 +87,7 @@
       <p class="dover">
       23813 Hwy 2<br/>
       Dover, ID 83825<br />
-      <a data-featherlight="<figure class='pricing-embed'><object type='application/pdf' data='pdf/pricing/prices_2024-01_dover_pit_eff.pdf#&navpanes=0' /></figure>">PRICE LIST</a>
+      <a href="pdf/pricing/prices_2024-01_dover_pit_eff.pdf#&navpanes=0" target="_blank">PRICE LIST</a>
     </p>
     </div>
     <div class="large-4 columns">
@@ -97,7 +95,7 @@
       <p class="colburn">
       581 Colburn Road<br/>
       Sandpoint, ID 83864<br />
-      <a data-featherlight="<figure class='pricing-embed'><object type='application/pdf' data='pdf/pricing/prices_2024-01_colburn_eff.pdf#&navpanes=0' /></figure>">PRICE LIST</a>
+      <a href="pdf/pricing/prices_2024-01_colburn_eff.pdf#&navpanes=0" target="_blank">PRICE LIST</a>
     </p>
   </div>
   <div class="large-4 columns">
@@ -105,7 +103,7 @@
     <p class="fighting">
       23100 US-95<br/>
       Coeur D’Alene, ID 83814<br />
-      <a data-featherlight="<figure class='pricing-embed'><object type='application/pdf' data='pdf/pricing/prices_2024-01_fcq_eff.pdf#&navpanes=0' /></figure>">PRICE LIST</a>
+      <a href="pdf/pricing/prices_2024-01_fcq_eff.pdf#&navpanes=0" target="_blank">PRICE LIST</a>
     </p>
 		</div>
     <div class="large-4 columns">
@@ -113,7 +111,7 @@
       <p class="bonners">
         Fitzpatrick Road<br/>
 				Bonners Ferry, ID 83805<br />
-				<a data-featherlight="<figure class='pricing-embed'><object type='application/pdf' data='pdf/pricing/prices_2024-01_cowcreek_pit_eff.pdf#&navpanes=0' /></figure>">PRICE LIST</a>
+				<a href="pdf/pricing/prices_2024-01_cowcreek_pit_eff.pdf#&navpanes=0" target="_blank">PRICE LIST</a>
 			</p>
 		</div>		
 		<div class="large-4 columns">
@@ -121,7 +119,7 @@
       <p class="bodie">
         N. Bodie Canyon Road<br/>
 				Priest River, ID 83856<br />
-				<a data-featherlight="<figure class='pricing-embed'><object type='application/pdf' data='pdf/pricing/prices_2024-01_bodie_quarry_eff.pdf#&navpanes=0' /></figure>">PRICE LIST</a>
+				<a href="pdf/pricing/prices_2024-01_bodie_quarry_eff.pdf#&navpanes=0" target="_blank">PRICE LIST</a>
 			</p>
 		</div>
 		<div class="large-4 columns">
@@ -129,7 +127,7 @@
 			<p class="tensed">
         Tensed<br/>
 				ID<br />
-				<a data-featherlight="<figure class='pricing-embed'><object type='application/pdf' data='pdf/pricing/prices_2024-01_tensedcreek_eff.pdf#&navpanes=0' /></figure>">PRICE LIST</a>
+				<a href="pdf/pricing/prices_2024-01_tensedcreek_eff.pdf#&navpanes=0" target="_blank">PRICE LIST</a>
 			</p>
 		</div>
     <div class="large-4 columns">
@@ -137,7 +135,7 @@
 			<p class="clark-fork">
         58345 HWY 200<br/>
 				Clark Fork, ID<br />
-				<a data-featherlight="<figure class='pricing-embed'><object type='application/pdf' data='pdf/pricing/prices_2024-01_cf-vogel_eff.pdf#&navpanes=0' /></figure>">PRICE LIST</a>
+				<a href="pdf/pricing/prices_2024-01_cf-vogel_eff.pdf#&navpanes=0" target="_blank">PRICE LIST</a>
 			</p>
 		</div>
 	</div>
