--- a/quarry-locations.html
+++ b/quarry-locations.html
@@ -78,7 +78,7 @@
       <p class="kootenai">
         2076 N. Kootenai Road<br/>
 				Sandpoint, ID 83864<br />
-				<a href="pdf/pricing/prices_2024-01_kootenai_pit_eff.pdf#&navpanes=0" target="_blank">PRICE LIST</a>
+				<a href="pdf/pricing/Peak-Sand-and-Gravel-Price-2024-List-KOOTENAI.pdf#&navpanes=0 target="_blank">PRICE LIST</a>
 			</p>
     </div>
 		
@@ -87,7 +87,7 @@
       <p class="dover">
       23813 Hwy 2<br/>
       Dover, ID 83825<br />
-      <a href="pdf/pricing/prices_2024-03_20_dover_pit_eff.pdf#&navpanes=0" target="_blank">PRICE LIST</a>
+      <a href="pdf/pricing/Peak-Sand-and-Gravel-Price-2024-List-DOVER.pdf#&navpanes=0 target="_blank">PRICE LIST</a>
     </p>
     </div>
     <div class="large-4 columns">
@@ -95,7 +95,7 @@
       <p class="colburn">
       581 Colburn Road<br/>
       Sandpoint, ID 83864<br />
-      <a href="pdf/pricing/prices_2024-01_colburn_eff.pdf#&navpanes=0" target="_blank">PRICE LIST</a>
+      <a href="pdf/pricing/Peak-Sand-and-Gravel-Price-2024-List-COLBURN.pdf#&navpanes=0 target="_blank">PRICE LIST</a>
     </p>
   </div>
   <div class="large-4 columns">
@@ -103,7 +103,7 @@
     <p class="fighting">
       23100 US-95<br/>
       Coeur D’Alene, ID 83814<br />
-      <a href="pdf/pricing/prices_2024-01_fcq_eff.pdf#&navpanes=0" target="_blank">PRICE LIST</a>
+      <a href="pdf/pricing/Peak-Sand-and-Gravel-Price-2024-List-FIGHTING_CREEK.pdf#&navpanes=0 target="_blank">PRICE LIST</a>
     </p>
 		</div>
     <div class="large-4 columns">
@@ -111,7 +111,7 @@
       <p class="bonners">
         Fitzpatrick Road<br/>
 				Bonners Ferry, ID 83805<br />
-				<a href="pdf/pricing/prices_2024-01_cowcreek_pit_eff.pdf#&navpanes=0" target="_blank">PRICE LIST</a>
+				<a href="pdf/pricing/Peak-Sand-and-Gravel-Price-2024-List-COW_CREEK.pdf#&navpanes=0 target="_blank">PRICE LIST</a>
 			</p>
 		</div>		
 		<div class="large-4 columns">
@@ -119,7 +119,7 @@
       <p class="bodie">
         N. Bodie Canyon Road<br/>
 				Priest River, ID 83856<br />
-				<a href="pdf/pricing/prices_2024-01_bodie_quarry_eff.pdf#&navpanes=0" target="_blank">PRICE LIST</a>
+				<a href="pdf/pricing/Peak-Sand-and-Gravel-Price-2024-List-BODIE.pdf#&navpanes=0" target="_blank">PRICE LIST</a>
 			</p>
 		</div>
 		<div class="large-4 columns">
@@ -127,7 +127,7 @@
 			<p class="tensed">
         Tensed<br/>
 				ID<br />
-				<a href="pdf/pricing/prices_2024-01_tensedcreek_eff.pdf#&navpanes=0" target="_blank">PRICE LIST</a>
+				<a href="pdf/pricing/Peak-Sand-and-Gravel-Price-2024-List-TENSED.pdf#&navpanes=0 target="_blank">PRICE LIST</a>
 			</p>
 		</div>
     <div class="large-4 columns">
@@ -135,7 +135,7 @@
 			<p class="clark-fork">
         58345 HWY 200<br/>
 				Clark Fork, ID<br />
-				<a href="pdf/pricing/prices_2024-01_cf-vogel_eff.pdf#&navpanes=0" target="_blank">PRICE LIST</a>
+				<a href="pdf/pricing/Peak-Sand-and-Gravel-Price-2024-List-CLARK_FORK.pdf#&navpanes=0 target="_blank">PRICE LIST</a>
 			</p>
 		</div>
 	</div>
